tests/baselines/reference/classExpression.errors.txt
==== tests/cases/compiler/classExpression.ts (4 errors) ====
    var x = class C {
            ~~~~~
!!! error TS1006: Identifier expected; 'class' is a keyword.
    }
    
    var y = {
        foo: class C2 {
             ~~~~~
!!! error TS1006: Identifier expected; 'class' is a keyword.
        }
    }
    ~
!!! error TS1008: Unexpected token; 'module, class, interface, enum, import or statement' expected.
    
    module M {
        var z = class C4 {
                ~~~~~
!!! error TS1006: Identifier expected; 'class' is a keyword.
        }
    }